# poetry_project

./: README.md  requirements.txt
create-project-with-poetry/: pyproject.toml
